<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchMatchLayout"
    android:background="@drawable/bakcground"
    android:orientation="vertical">

    <LinearLayout
        style="@style/MatchMatchLayout"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_kangendesa" />

        <RelativeLayout
            style="@style/MatchWrapLayout"
            android:layout_margin="20dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputUsername"
                style="@style/TextLabel"
                android:padding="5dp"
                android:textColorHint="#E76B22">

                <EditText
                    android:id="@+id/edtUsername"
                    style="@style/AppTheme.EditTextMaterial"
                    android:textColorHint="#E76B22"
                    android:ems="10"
                    android:hint="@string/username" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputFirstName"
                android:layout_below="@id/inputUsername"
                style="@style/TextLabel"
                android:padding="5dp"
                android:textColorHint="#E76B22">

                <EditText
                    android:id="@+id/edtFirstName"
                    style="@style/AppTheme.EditTextMaterial"
                    android:textColorHint="#E76B22"
                    android:ems="10"
                    android:hint="@string/firstname" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLastName"
                android:layout_below="@id/inputFirstName"
                style="@style/TextLabel"
                android:textColorHint="#E76B22"
                android:padding="5dp">

                <EditText
                    android:id="@+id/edtLastName"
                    style="@style/AppTheme.EditTextMaterial"
                    android:textColorHint="#E76B22"
                    android:ems="10"
                    android:hint="@string/lastname" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputEmail"
                android:layout_below="@id/inputLastName"
                style="@style/TextLabel"
                android:textColorHint="#E76B22"
                android:padding="5dp">

                <EditText
                    android:id="@+id/edtEmail"
                    style="@style/AppTheme.EditTextMaterial"
                    android:textColorHint="#E76B22"
                    android:ems="10"
                    android:hint="@string/email" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputPassword"
                style="@style/TextLabel"
                android:layout_below="@id/inputEmail"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:textColorHint="#E76B22"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#E76B22">

                <EditText
                    android:id="@+id/edtPassword"
                    style="@style/AppTheme.EditTextMaterial"
                    android:ems="10"
                    android:hint="@string/password"
                    android:textColorHint="#E76B22"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputConfirmPassword"
                style="@style/TextLabel"
                android:layout_below="@id/inputPassword"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:textColorHint="#E76B22"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#E76B22">

                <EditText
                    android:id="@+id/edtConfirmPassword"
                    style="@style/AppTheme.EditTextMaterial"
                    android:ems="10"
                    android:textColorHint="#E76B22"
                    android:hint="@string/confirmpassword"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputConfirmPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_round"
                android:padding="5dp"
                android:text="Register"
                android:textColor="#fc9c34"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>